// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButton /> Default properties 1`] = `
<div
  className="form-group"
>
  <div>
    <span
      className="container--action-button btn btn-default"
      onClick={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    />
  </div>
</div>
`;

exports[`<ActionButton /> Disabled 1`] = `
<div
  className="form-group"
>
  <div>
    <span
      className="container--action-button btn btn-default disabled"
    />
  </div>
</div>
`;

exports[`<ActionButton /> With custom props 1`] = `
<div
  className="test-container-class"
  title="test-title"
>
  <div
    className="test-button-class"
  >
    <span
      className="container--action-button btn btn-default"
      onClick={[MockFunction]}
    />
    <span
      className="label-help-target"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="label-help-icon fa fa-question-circle"
      />
    </span>
  </div>
</div>
`;
